desktop-themes/TraditionalOk/gtk-3.0/gtk-widgets.css
/* ... */
menubar menuitem {
    border-style: none;
    padding: 3px 5px;
    background-color: transparent;
}

menubar menuitem:hover,
menuitem button.flat:hover,
menuitem button.flat:active {
    background-color: @menu_bg_color;
    border-style: solid;
    border-width: 1px 1px 0px;
    border-color: @menubar_menuitem_hover_border_color;
    border-radius: 3px 3px 0 0;
    color: @menubar_menuitem_hover_color;
    background-image: -gtk-gradient (linear,
                      left top,
                      left bottom,
                      from (@menubar_menuitem_hover_gradient_a),
                      color-stop (0.50, @menubar_menuitem_hover_gradient_b),
                      color-stop (0.50, @menubar_menuitem_hover_gradient_c),
                      to (@menubar_menuitem_hover_gradient_d));
}

menuitem button.flat:hover {
    border-width: 1px;
    border-radius: 3px;
}

menuitem button.flat:focus {
    color: @theme_text_color;
}

menubar menuitem:hover {
    border-width: 1px;
    color: @menubar_menuitem_hover_color;
}

menu menuitem,
menu menuitem:disabled {
    border-width: 1px 0px;
    border-style: solid;
    border-color: transparent;
    padding: 4px;
    background-color: @menu_bg_color;
}

menu menuitem:hover {
    border-radius: 0;
}

treemenu menuitem:hover,
menu menuitem:active,
menu menuitem:hover {
    border-style: solid;
    border-width: 1px 0px;
    border-color: @menubar_menuitem_hover_border_color;
}

treemenu menuitem:hover,
combobox menuitem:hover,
menu menuitem:active,
menu menuitem:active,
menu menuitem:hover,
menu menuitem:hover {
    color: @theme_selected_fg_color;
    background-image: -gtk-gradient (linear,
                      left top,
                      left bottom,
                      from (@menubar_menuitem_hover_gradient_a),
                      color-stop (0.50, @menubar_menuitem_hover_gradient_b),
                      color-stop (0.50, @menubar_menuitem_hover_gradient_c),
                      to (@menubar_menuitem_hover_gradient_d));
}

menu menuitem:disabled {
    color: mix (@menu_fg_color, @menu_bg_color, 0.6);
}

menu menuitem accelerator:disabled {
    color: mix (@menu_fg_color, @menu_bg_color, 0.7);
}

menuitem accelerator {
    color: alpha (@menu_fg_color, 0.4);
}

menuitem accelerator:hover,
menuitem accelerator:active {
    color: alpha (@menu_fg_color, 0.3);
}

menuitem arrow {
    min-height: 16px;
    min-width: 16px;
    margin-left: 10px;
    color: @menu_controls_color;
}

menu menuitem arrow:dir(ltr) {
    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic");
}

menu menuitem arrow:dir(rtl) {
    -gtk-icon-source: -gtk-icontheme("pan-end-symbolic-rtl");
}

menu arrow.top {
    -gtk-icon-source: -gtk-icontheme("pan-up-symbolic");
}

menu arrow.bottom {
    -gtk-icon-source: -gtk-icontheme("pan-down-symbolic");
}

menu arrow:hover {
    border-color: @theme_selected_fg_color;
    color: shade (@theme_selected_bg_color, 1.6);
}

menu separator,
menuitem separator {
    color: @menu_separator_color;
    min-height: 1px;
    border-image: -gtk-gradient (linear,
                                 left top, right top,
                                 from (alpha (#000, 0.00)),
                                 color-stop (0.25, alpha (#000, 0.03)),
                                 color-stop (0.85, alpha (#000, 0.03)),
                                 to (alpha (#000, 0.00))) 1;
}

menuitem check,
menuitem radio,
menuitem check:hover,
menuitem radio:hover,
menuitem check:disabled,
menuitem radio:disabled {
    background-image: none;
    background-color: transparent;
    min-height: 12px;
    min-width: 12px;
}

menuitem check:active,
menuitem radio:active {
    background-color: transparent;
}

/***************
 * Menu Button *
 ***************/

menuitem button.flat:active {
    color: @theme_text_color;
    background-image: none;
    background-color: @menu_bg_color;
    border-radius: 5px 5px 0 0;
    border-image: none;
    border-width: 1px 1px 0 1px;
    border-color: shade(@border_color, 1.30);
    border-style: solid;
}

/****************
 * Radiobuttons *
 ****************/

check,
radio,
check:disabled,
radio:disabled {
    background-color: transparent;
    border-style: none;
}

check,
radio,
menuitem check,
menuitem radio,
menu menuitem check,
menu menuitem radio {
    padding: 0px 6px 0px 0px;
    background-repeat: no-repeat;
    background-position: center;
}

check row:selected:disabled,
check row:selected:focus:disabled {
    background-color: transparent;
}

checkbutton:hover,
checkbutton:active:hover,
checkbutton:selected,
checkbutton:selected:focus {
    background-color: transparent;
}

/************
 * Toolbars *
 ************/

toolbar {
    border-style: none;
    border-color: darker (@theme_bg_color);
    padding: 3px;
}

toolbar button {
    padding: 1px;
}

toolbar:disabled {
    color: alpha (@theme_fg_color, 0.6);
}

/********************
 * Menubar Toolbars *
 ********************/

toolbar menubar {
    border-style: none;
    -GtkToolbar-button-relief: normal;
    padding-left: 4px;
    padding-right: 4px;
}

/********************
 * Primary Toolbars *
 ********************/

/* applications using EggEditableToolbar usually set the primary-toolbar
 * hint on the containing vbox, so we need to handle both these cases here.
 */
toolbar.primary-toolbar {
    border-width: 1px 0 1px 0;
    border-radius: 0;
    border-style: solid;
    border-top-color: @toolbar_border_top_color;
    border-bottom-color: @toolbar_border_bottom_color;
    -GtkWidget-window-dragging: true;
    -GtkToolbar-button-relief: normal;
}

toolbar.primary-toolbar:disabled {
    background-image: none;
    background-color: shade (@theme_bg_color, 0.97);
    border-color: shade (@theme_bg_color, 0.91);
}
/* ... */

